# code_your_own_pandas_pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
code_your_own_pandas_pipeline/: aggregations.py  config.py  data_in.py  pipeline.py  plots.py  processing.py
