[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "code_your_own_pandas_pipeline"
version = "0.0.1"
description = "Fork this repository and code along with me as we build our own Pandas Pipeline!"
authors = [
  { name = "Joseph Wilson" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["code_your_own_pandas_pipeline"]
force_sort_within_sections = true
